syntax = "proto3";

package sensors.v1;

import "google/protobuf/timestamp.proto";

option optimize_for = SPEED;

message SensorEvent {
  string sensor_id = 1;
  string location = 2;
  google.protobuf.Timestamp timestamp = 3;

  oneof data {
    RotaryData rotary = 4;
    DistanceData distance = 5;
    NFCData nfc = 6;
  }
}

message RotaryData {
  uint32 position = 1;
}

enum DistanceRange {
  DISTANCE_RANGE_UNSPECIFIED = 0;
  DISTANCE_RANGE_SHORT = 1;
  DISTANCE_RANGE_MEDIUM = 2;
  DISTANCE_RANGE_LONG = 3;
}

message DistanceData {
  float distance = 1;
  DistanceRange range = 2;
}

message NFCData {
  string id = 1;
}
